--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Ejercicio 2 de react">
+        <meta name="keywords" content="props, components, react,bootstrap">
+        <meta name="author" content="Eugenia Sansierra">
+    <title>Ejercicio 2 de React</title>
   </head>
   <body>
     <div id="root"></div>
